# crm-system

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements_dev.txt  setup.cfg
crm/: Dockerfile  ads-fixtures.json  contracts-fixtures.json  customers-fixtures.json  leads-fixtures.json  services-fixtures.json  users-fixtures.json
crm/advertising/: factories.py  models.py  tests.py  urls.py  views.py
crm/advertising/migrations/: 0001_initial.py  0002_alter_advertising_budget_alter_advertising_channel_and_more.py
crm/clients/: factories.py  forms.py  models.py  test_leads.py  tests.py  tests_customers.py  urls.py  utils.py  validators.py  views.py
crm/clients/migrations/: 0001_initial.py  0002_rename_potclient_lead.py  0003_alter_lead_phone.py  0004_customer.py  0005_rename_second_name_lead_last_name.py  0006_alter_lead_phone.py  0007_alter_lead_phone.py
crm/contracts/: factories.py  models.py  tests.py  urls.py  views.py
crm/contracts/migrations/: 0001_initial.py  0002_rename_date_contract_start_date_and_more.py  0003_alter_contract_end_date.py
crm/crm/: settings.py  urls.py
crm/crm/templates/: _base.html
crm/my_statistics/: apps.py  urls.py  views.py
crm/my_statistics/business/: statistics_logic.py  statistics_models.py  tests.py
crm/myauth/: urls.py  utils.py
crm/services/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
crm/services/migrations/: 0001_initial.py  0002_rename_price_service_cost.py
nginx/: Dockerfile  nginx.conf
(+13 files in other folders)
