[tool.black]
line-length = 88
force-exclude = '''
/(
    \.venv
  | \.venv_dev
  | migrations
)/
|
(
    .*/apps\.py
  | .*/settings\.py
  | /crm/manage\.py
  | /crm/wsgi\.py
  | /crm/asgi\.py
)
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip_glob = [
    "**/migrations/*",
    "**/settings.py",
    "**/apps.py",
    "**/.venv/*",
    "**/.venv_dev/*",
    "**wsgi.py",
    "**asgi.py",
    "**manage.py",
]

[tool.mypy]
exclude = [
    ".venv",
    ".venv_dev",
    ".*/migrations/",
    '.*/apps\.py',
    '.*/settings\.py',
    '.*manage\.py',
    '.*wsgi\.py',
    '.*asgi\.py'
]
ignore_missing_imports = true

[tool.poetry]
name = "crm-system"
version = "0.1.0"
description = ""
authors = ["Vladimir Volosnikov <volosnikovvladimir69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
factory-boy = "^3.3.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
